resources/docco.css
/*--------------------- Layout and Typography ----------------------------*/
body {
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
  font-size: 15px;
  line-height: 22px;
  color: #252519;
  margin: 0; padding: 0;
}

a {
  color: #261a3b;
}

a:visited {
  color: #261a3b;
}


h1 {
  margin-top: 40px;
}

hr {
  border: 0 none;
  border-top: 1px solid #e5e5ee;
  height: 1px;
  margin: 20px 0;
}

pre, tt, code {
  font-size: 12px; line-height: 18px;
  font-family: Menlo, Monaco, Consolas, "Lucida Console", monospace;
  margin: 0; padding: 0;
}

/*---------------------- Syntax Highlighting -----------------------------*/
td.linenos { background-color: #f0f0f0; padding-right: 10px; }
span.lineno { background-color: #f0f0f0; padding: 0 5px 0 5px; }
body .hll { background-color: #ffffcc }
body .c { color: #408080; font-style: italic }  /* Comment */
body .err { border: 1px solid #FF0000 }         /* Error */
body .k { color: #954121 }                      /* Keyword */
body .o { color: #666666 }                      /* Operator */
body .cm { color: #408080; font-style: italic } /* Comment.Multiline */
body .cp { color: #BC7A00 }                     /* Comment.Preproc */
body .c1 { color: #408080; font-style: italic } /* Comment.Single */
body .cs { color: #408080; font-style: italic } /* Comment.Special */
body .gd { color: #A00000 }                     /* Generic.Deleted */
body .ge { font-style: italic }                 /* Generic.Emph */
body .gr { color: #FF0000 }                     /* Generic.Error */
body .gh { color: #000080; font-weight: bold }  /* Generic.Heading */
body .gi { color: #00A000 }                     /* Generic.Inserted */
body .go { color: #808080 }                     /* Generic.Output */
body .gp { color: #000080; font-weight: bold }  /* Generic.Prompt */
body .gs { font-weight: bold }                  /* Generic.Strong */
body .gu { color: #800080; font-weight: bold }  /* Generic.Subheading */
body .gt { color: #0040D0 }                     /* Generic.Traceback */
body .kc { color: #954121 }                     /* Keyword.Constant */
body .kd { color: #954121; font-weight: bold }  /* Keyword.Declaration */
body .kn { color: #954121; font-weight: bold }  /* Keyword.Namespace */
body .kp { color: #954121 }                     /* Keyword.Pseudo */
body .kr { color: #954121; font-weight: bold }  /* Keyword.Reserved */
body .kt { color: #B00040 }                     /* Keyword.Type */
body .m { color: #666666 }                      /* Literal.Number */
body .s { color: #219161 }                      /* Literal.String */
body .na { color: #7D9029 }                     /* Name.Attribute */
body .nb { color: #954121 }                     /* Name.Builtin */
body .nc { color: #0000FF; font-weight: bold }  /* Name.Class */
body .no { color: #880000 }                     /* Name.Constant */
body .nd { color: #AA22FF }                     /* Name.Decorator */
body .ni { color: #999999; font-weight: bold }  /* Name.Entity */
body .ne { color: #D2413A; font-weight: bold }  /* Name.Exception */
body .nf { color: #0000FF }                     /* Name.Function */
body .nl { color: #A0A000 }                     /* Name.Label */
body .nn { color: #0000FF; font-weight: bold }  /* Name.Namespace */
body .nt { color: #954121; font-weight: bold }  /* Name.Tag */
body .nv { color: #19469D }                     /* Name.Variable */
body .ow { color: #AA22FF; font-weight: bold }  /* Operator.Word */
body .w { color: #bbbbbb }                      /* Text.Whitespace */
body .mf { color: #666666 }                     /* Literal.Number.Float */
body .mh { color: #666666 }                     /* Literal.Number.Hex */
body .mi { color: #666666 }                     /* Literal.Number.Integer */
body .mo { color: #666666 }                     /* Literal.Number.Oct */
body .sb { color: #219161 }                     /* Literal.String.Backtick */
body .sc { color: #219161 }                     /* Literal.String.Char */
body .sd { color: #219161; font-style: italic } /* Literal.String.Doc */
body .s2 { color: #219161 }                     /* Literal.String.Double */
body .se { color: #BB6622; font-weight: bold }  /* Literal.String.Escape */
body .sh { color: #219161 }                     /* Literal.String.Heredoc */
body .si { color: #BB6688; font-weight: bold }  /* Literal.String.Interpol */
body .sx { color: #954121 }                     /* Literal.String.Other */
body .sr { color: #BB6688 }                     /* Literal.String.Regex */
body .s1 { color: #219161 }                     /* Literal.String.Single */
body .ss { color: #19469D }                     /* Literal.String.Symbol */
body .bp { color: #954121 }                     /* Name.Builtin.Pseudo */
body .vc { color: #19469D }                     /* Name.Variable.Class */
body .vg { color: #19469D }                     /* Name.Variable.Global */
body .vi { color: #19469D }                     /* Name.Variable.Instance */
body .il { color: #666666 }                     /* Literal.Number.Integer.Long */


/*320px __________________________________________________________________________________________________________ */


ul.sections {
  list-style: none;
  padding:0;
  margin:0;
}

ul.sections > li > span {
  display: block;
  width:100%;
}

/* 
  Force border-box on inputs so that % widths fit the parent
  search container without overlap because of margin/padding.
  
  More Info : http://www.quirksmode.org/css/box.html
*/
ul.sections > li > span {
  -moz-box-sizing: border-box;    /* firefox */
  -ms-box-sizing: border-box;     /* ie */
  -webkit-box-sizing: border-box; /* webkit */
  -khtml-box-sizing: border-box;  /* konqueror */
  box-sizing: border-box;         /* css3 */  
  padding:5px 10px 5px 10px;
}


ul.sections > li > span.docs {
  background: #fff;
  width:98%;
}

ul.sections > li > span.code {
  background: #f5f5ff;
  overflow-x:auto;
  border-bottom: 1px dashed #CACACA;
}

#jump_to { display: none; }
.pilwrap { display: none; }

/*/mediaquery*/

/*1024px __________________________________________________________________________________________________________ */
@media only screen and (min-width: 1024px) {

  p {
    margin: 0 0 15px 0;
  }

  h1, h2, h3, h4, h5, h6 {
    margin: 0 0 15px 0;
  }


  #container {
    position: relative;
  }

  #background {
    position: fixed;
    top: 0; left: 525px; right: 0; bottom: 0;
    background: #f5f5ff;
    border-left: 1px solid #e5e5ee;
    z-index: -1;
  }


  /*---------------------- Jump Page -----------------------------*/

  #jump_to, #jump_page {
    background: white;
    -webkit-box-shadow: 0 0 25px #777; -moz-box-shadow: 0 0 25px #777;
    -webkit-border-bottom-left-radius: 5px; -moz-border-radius-bottomleft: 5px;
    font: 10px Arial;
    text-transform: uppercase;
    cursor: pointer;
    text-align: right;
  }

  #jump_to, #jump_wrapper {
    position: fixed;
    right: 0; top: 0;
    padding: 5px 10px;
  }

  #jump_wrapper {
    padding: 0;
    display: none;
  }

  #jump_to:hover #jump_wrapper {
    display: block;
  }

  #jump_page {
    padding: 5px 0 3px;
    margin: 0 0 25px 25px;
  }

  #jump_page .source {
    display: block;
    padding: 5px 10px;
    text-decoration: none;
    border-top: 1px solid #eee;
  }

  #jump_page .source:hover {
    background: #f5f5ff;
  }

  #jump_page .source:first-child {
  }

  ul.sections > li {
    overflow: hidden;
    white-space: nowrap;
  }


  ul.sections > li > span {
    display: inline-block;
  }

  ul.sections > li > span.docs {
    max-width: 525px;
    min-width: 525px;
    min-height: 5px;
    padding: 10px 25px 1px 50px;
    overflow-x: hidden;
    white-space: normal;
    vertical-align: top;
    text-align: left;
  }

  ul.sections > li > span.code {
    overflow: hidden;
    border:none;
  }

  ul.sections > li > span.docs pre {
    margin: 15px 0 15px;
    padding-left: 15px;
  }

  ul.sections > li > span.docs p tt, .docs p code {
    background: #f8f8ff;
    border: 1px solid #dedede;
    font-size: 12px;
    padding: 0 0.2em;
  }

  .pilwrap {
    position: relative;
  }

  .pilcrow {
    font: 12px Arial;
    text-decoration: none;
    color: #454545;
    position: absolute;
    top: 3px; left: -20px;
    padding: 1px 2px;
    opacity: 0;
    -webkit-transition: opacity 0.2s linear;
  }

  ul.sections > li > span.docs:hover .pilcrow {
    opacity: 1;
  }

  ul.sections > li > span.code {
    padding: 14px 15px 16px 25px;
    vertical-align: top;
    background: #f5f5ff;
  }

}

/*/mediaquery*/

